[metadata]
name = vimage
description = Extracts relevant scenes from a video using Locality Sensitive Hashing (LSH)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/danielef/vimage
author = Daniel Estevez
author_email = daniel.ef@gmail.com
licence = MIT
classifiers =
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Computer Vision
[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    colorlog==6.6.0
python_requires = >=3.7
setup_requires =
    setuptools_scm
[bdist_wheel]
universal = 1
[options.entry_points]
console_scripts =
    vimage = vimage.app:main
